Version 1.03 (2009-12-14)
  * Add prgram sndfile-jackplay.
  * sndfile-spectrogram : Add --no-border option, improve frequency access
    interpolation.

Version 1.02 (2007-10-21)
  * sndfile-spectrogram : Calculate longer FFTs and then interpolate to the
    image height.
  * Add documentation.

Version 1.01 (2007-10-16)
  * Depend on libsndfile >= 1.0.18.

Version 1.00 (2007-10-15)
  * Initial release.